--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ requires-python = ">=3.11"
 dependencies = [
     "chuk-mcp-server>=0.23.8",
     "chuk-view-schemas>=0.1.1",
+    "httpx>=0.27.0",
 ]
 
 [project.optional-dependencies]
